Fix duplicate value. Add max-height and overflow: scroll for searchable-multiselect

--- a/src/styles.less
+++ b/src/styles.less
@@ -38,11 +38,13 @@
 }
 .options {
 	position: absolute;
-	top: 32px;
+	top: 34px;
 	background-color: #fff;
 	width: 100%;
 	border: 1px solid #cecece;
 	box-sizing: border-box;
+	max-height: 340px;
+	overflow-y: scroll;
 	li {
 		list-style: none;
 		line-height: 32px;
